moved everything out of the big ModServer/ModClient files, made bleeding an attachment, made the seal have a constructor instead of being abstract, updated Java to 21, merged Client and Server into Lulasmod, added org.gradle.configuration-cache=false into the gradle.properties, did some fixes regarding the TypedActionResult, the damage method and the cooldown method in items, removed the 3d model of the trident, TagManager.java is gone, now there is only the attachment, removed the tag-manager command, changed some gui-logic, updated packets to new format, turned PlayerManagerMixin.java into a hook in the Lulasmod class, removed everything enchantment related from the SharpTomeItem, SpellHotbar uses now List exclusively and has modern names, added TimeForwardAnimator to simplify the animation into one file