@@ -1,6 +1,5 @@
-package net.spit365.lulasmod.custom.item.seal;
+package net.spit365.lulasmod.custom.item;
 
-import net.fabricmc.fabric.api.item.v1.FabricItemSettings;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.EquipmentSlot;
 import net.minecraft.entity.LivingEntity;
@@ -14,35 +13,45 @@ import net.minecraft.text.Text;
 import net.minecraft.util.ActionResult;
 import net.minecraft.util.Hand;
 import net.minecraft.util.Identifier;
-import net.minecraft.util.TypedActionResult;
 import net.minecraft.world.World;
 import net.spit365.lulasmod.custom.SpellHotbar;
-import net.spit365.lulasmod.custom.item.SpellItem;
-import net.spit365.lulasmod.mod.ModServer;
+import net.spit365.lulasmod.mod.ModData;
 import net.spit365.lulasmod.mod.ModMethods;
-import net.spit365.lulasmod.manager.TagManager;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.LinkedList;
+import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
-public abstract class AbstractSealItem extends Item  implements SpellHotbar {
-    public AbstractSealItem() {super(new Item.Settings().maxCount(1));}
+public class SealItem extends Item  implements SpellHotbar {
+    public SealItem(Usable canUse, float efficiencyMultiplier, int cooldownDivisor) {
+		super(new Item.Settings().maxCount(1));
+		this.canUse = canUse;
+		this.efficiencyMultiplier = efficiencyMultiplier;
+		this.cooldownDivisor = cooldownDivisor;
+	}
+	public interface Usable{boolean accept(LivingEntity entity);}
+    public Usable canUse;
+    public Float efficiencyMultiplier;
+    public Integer cooldownDivisor;
 
-    @Override public LinkedList<Identifier> displayList(PlayerEntity player){return TagManager.readList(player, ModServer.TagCategories.EQUIPPED_SPELLS);}
-    @Override public void cycleList(PlayerEntity player){TagManager.cycle(player, ModServer.TagCategories.EQUIPPED_SPELLS);}
+    @Override public List<Identifier> getHotbarList(PlayerEntity player){return player.getAttached(ModData.EQUIPPED_SPELLS);}
+    @Override public void onCycle(PlayerEntity player){
+		List<Identifier> list = player.getAttached(ModData.EQUIPPED_SPELLS);
+		if (list != null) {
+			Collections.rotate(list, -1);
+			player.setAttached(ModData.EQUIPPED_SPELLS, list);
+		}
+	}
 
-    public abstract Boolean canUse(LivingEntity entity);
-    public abstract Float efficiencyMultiplier();
-    public abstract Integer cooldownMultiplier();
 
     @Override
     public ActionResult use(World world, PlayerEntity player, Hand hand) {
-        if (world instanceof ServerWorld serverWorld && canUse(player)) {
-            LinkedList<Identifier> spellList = TagManager.readList(player, ModServer.TagCategories.EQUIPPED_SPELLS);
-            if(!spellList.isEmpty() && Registries.ITEM.get(spellList.get(0)) instanceof SpellItem spellItem) {
+        if (world instanceof ServerWorld serverWorld && canUse.accept(player)) {
+            List<Identifier> spellList = player.getAttached(ModData.EQUIPPED_SPELLS);
+            if(spellList != null && !spellList.isEmpty() && Registries.ITEM.get(spellList.getFirst()) instanceof SpellItem spellItem) {
                 player.getItemCooldownManager().set(player.getStackInHand(hand), Math.max(spellItem.cooldown, 2));
-                spellItem.cast(serverWorld, player, hand, efficiencyMultiplier(), cooldownMultiplier());
+                spellItem.cast(serverWorld, player, hand, efficiencyMultiplier, cooldownDivisor);
                 player.incrementStat(Stats.USED.getOrCreateStat(this));
                 return ActionResult.SUCCESS;
             }
